[20220816] add debtor_record_amount in req.body
